--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-md"> 
+      <%= render 'shared/menu' %>
+      <% flash.each do |key , value| %>
+        <%= tag.div value, class: "alert alert-success #{key} my-3", role: 'alert' %>
+      <% end %>     
+      <%= yield %>
+    </div>
+      <%= render 'shared/footer' %>  
+
+  </body>
   </body>
 </html>
