edit page complete

--- a/app/views/rigconfigs/new.html.erb
+++ b/app/views/rigconfigs/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Rigconfigs#new</h1>
-<p>Find me in app/views/rigconfigs/new.html.erb</p>
+<h1 class="text-center display-5 mb-3">Создание конфигурации</h1>
+      <p class=" text-center mb-3">
+          Страница для создания конфигурации
+      </p>
+      
+<%= render 'form' %>
