--- a/app/views/rigconfigs/edit.html.erb
+++ b/app/views/rigconfigs/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Rigconfigs#edit</h1>
-<p>Find me in app/views/rigconfigs/edit.html.erb</p>
+<h1 class="text-center display-5 mb-3">Изменить конфигурацию</h1>
+      <p class=" text-center mb-3">
+          Страница для изменения конфигурации, для отображения информации по буровой установки
+      </p>
+      
+<%= render 'form' %>
