--- a/app/views/rigconfigs/index.html.erb
+++ b/app/views/rigconfigs/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Rigconfigs#index</h1>
-<p>Find me in app/views/rigconfigs/index.html.erb</p>
+<h1 class="display-4 text-center">Информация по автоматизированным буровым</h1>
+
+
+
+<div class="row align-items-start g-2">
+
+  <div class="col-4 mb-3">
+    <% @rigs.where(rig_type: "Drillmec наземного исполнения").each do |item| %>
+      <%= render 'card', rig: item %>
+    <% end %>
+  </div>
+
+  <div class="col-4 mb-3">
+    <% @rigs.where(rig_type: "Drillmec эшелонного исполнения").each do |item| %>
+      <%= render 'card', rig: item %>
+    <% end %>
+  </div>
+
+  <div class="col-4 mb-3">
+    <% @rigs.where(rig_type: "АРС-250").each do |item| %>
+      <%= render 'card', rig: item %>
+    <% end %>
+  </div>
+
+</div>
